# pipwatch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING_MAPPINGS.md
scripts/: fetch_pypi_mappings.py  populate_mappings.py
src/pipwatch/: main.py  mapping_registry.py  mappings.json
tests/: __init__.py  conftest.py  test_main.py  test_mapping_registry.py
